--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "build": "rimraf dist/ && babel ./server/ --out-dir dist/ --copy-files",
     "start": "npm run build && node dist/index.js",
-    "heroku-postbuild": "cd front-end/ && npm install --only=dev && npm install && npm run build && cd .. && npm install --only=dev && npm install && npm start"
+    "heroku-postbuild": "cd front-end/ && npm install --only=dev && npm install && npm run build && cd .. && npm install --only=dev && npm install"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
